// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`sleep target should sleep and not be able to attack 1`] = `
"*Игрок 1* заклинанием _Усыпление_ заставил *Игрок 2* заснуть на этот раунд
\\[ 📖5 ]
*Игрок 2* пытался атаковать *Игрок 1*, но у него не получилось
_Усыпление_ *Игрок 1*
*Игрок 2* пытался использовать _Защита_ на *Игрок 1*, но у него не получилось
_Усыпление_ *Игрок 1*
*Игрок 2* пытался использовать _Лечение руками_ на *Игрок 2*, но у него не получилось
_Усыпление_ *Игрок 1*
*Игрок 2* пытался использовать _👹 Берсерк_ на *Игрок 2*, но у него не получилось
_Усыпление_ *Игрок 1*"
`;

exports[`sleep should handle several casters 1`] = `
"*Игрок 1* заклинанием _Усыпление_ заставил *Игрок 2* заснуть на этот раунд
\\[ 📖5 ]
*Игрок 3* заклинанием _Усыпление_ заставил *Игрок 2* заснуть на этот раунд
\\[ 📖5 ]
*Игрок 2* пытался атаковать *Игрок 1*, но у него не получилось
_Усыпление_ *Игрок 1*
_Усыпление_ *Игрок 3*
*Игрок 2* пытался использовать _Защита_ на *Игрок 1*, но у него не получилось
_Усыпление_ *Игрок 1*
_Усыпление_ *Игрок 3*
*Игрок 2* пытался использовать _Лечение руками_ на *Игрок 2*, но у него не получилось
_Усыпление_ *Игрок 1*
_Усыпление_ *Игрок 3*
*Игрок 2* пытался использовать _👹 Берсерк_ на *Игрок 2*, но у него не получилось
_Усыпление_ *Игрок 1*
_Усыпление_ *Игрок 3*"
`;

exports[`sleep should cast long 1`] = `
"⏳1 *Игрок 1* заклинанием _Усыпление_ заставил *Игрок 2* заснуть на этот раунд
\\[ 📖5 ]"
`;
